  # single big json file.
  cmd = format('jq \
      --slurpfile cumulus %s \
      --slurpfile substrate %s \
      --slurpfile polkadot %s \
      --slurpfile srtool_shell %s \
      --slurpfile srtool_westmint %s \
      --slurpfile srtool_statemine %s \
      --slurpfile srtool_statemint %s \
      --slurpfile srtool_rococo_parachain %s \
      --slurpfile srtool_contracts_rococo %s \
      --slurpfile srtool_polkadot_collectives %s \
      --slurpfile srtool_bridge_hub_rococo %s \
      --slurpfile srtool_bridge_hub_kusama %s \
      -n \'{
            cumulus: $cumulus[0],
            substrate: $substrate[0],
            polkadot: $polkadot[0],
          srtool: [
            { name: "shell", data: $srtool_shell[0] },
            { name: "westmint", data: $srtool_westmint[0] },
            { name: "statemine", data: $srtool_statemine[0] },
            { name: "statemint", data: $srtool_statemint[0] },
            { name: "rococo", data: $srtool_rococo_parachain[0] },
            { name: "contracts", data: $srtool_contracts_rococo[0] },
            { name: "polkadot-collectives", data: $srtool_polkadot_collectives[0] },
            { name: "bridge-hub-rococo", data: $srtool_bridge_hub_rococo[0] },
            { name: "bridge-hub-kusama", data: $srtool_bridge_hub_kusama[0] },
            { name: "bridge-hub-polkadot", data: $srtool_bridge_hub_polkadot[0] }
      ] }\' > context.json',
        cumulus_data,
        substrate_data,
        polkadot_data,
        SHELL_DIGEST,
        WESTMINT_DIGEST,
        STATEMINE_DIGEST,
        STATEMINT_DIGEST,
        ROCOCO_PARA_DIGEST,
        CANVAS_KUSAMA_DIGEST,
        POLKADOT_COLLECTIVES_DIGEST,
        BRIDGE_HUB_ROCOCO_DIGEST,
        BRIDGE_HUB_KUSAMA_DIGEST,
        BRIDGE_HUB_POLKADOT_DIGEST
  )
end
system(cmd)

cmd = format('tera --env --env-key env --include-path templates \
        --template templates/template.md.tera context.json > %s', output)
system(cmd)